Added Fan Out - Fan In Jobs

--- a/01-azure-pipelines.yml
+++ b/01-azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 jobs:
   - job: Job1
     steps:
-    - script: echo Hello, world from Job1!
+    - script: echo Hello, world from Job 1!
       displayName: 'Run a one-line script'
 
     - script: |
@@ -23,11 +23,19 @@ jobs:
   - job: Job2
     dependsOn: Job1
     steps:
-    - script: echo Hello, world from Job2!
+    - script: echo Hello, world from Job 2!
       displayName: 'Run a one-line script'
 
   - job: Job3
-    dependsOn: Job2
+    dependsOn: Job1
     steps:
     - script: echo Hello, world from Job 3!
+      displayName: 'Run a one-line script'
+
+  - job: Job4
+    dependsOn:
+      - Job2
+      - Job3
+    steps:
+    - script: echo Hello, world from Job 4!
       displayName: 'Run a one-line script'
