Corrected Build Variable Print Statement Syntax

--- a/02-TestPipelineWithStages.yml
+++ b/02-TestPipelineWithStages.yml
@@ -10,13 +10,13 @@ stages:
   - job: Job1
     steps:
     - bash: echo Build Stage - Job 1!
-    #- bash: echo ${Build.BuildNumber}
-    - bash: echo ${Build.BuildId}
-    - bash: echo ${Build.SourceBranchName}
-    - bash: echo ${Build.SourcesDirectory}
-    - bash: echo ${Build.ArtifactStagingDirectory}
-    - bash: echo ${System.DefaultWorkingDirectory}
-    - bash: ls -R ${System.DefaultWorkingDirectory}
+    - bash: echo $(Build.BuildNumber)
+    - bash: echo $(Build.BuildId)
+    - bash: echo $(Build.SourceBranchName)
+    - bash: echo $(Build.SourcesDirectory)
+    - bash: echo $(Build.ArtifactStagingDirectory)
+    - bash: echo $(System.DefaultWorkingDirectory)
+    - bash: ls -R $(System.DefaultWorkingDirectory)
   - job: Job2
     steps:
     - bash: echo Build Stage - Job 2!
