--- a/02-TestPipelineWithStages.yml
+++ b/02-TestPipelineWithStages.yml
@@ -28,6 +28,11 @@ stages:
           **/*.yml
           **/*.tf
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
 #   - job: Job2
 #     steps:
 #     - bash: echo Build Stage - Job 2!
